--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,8 @@
 		"opis/json-schema": "^2.2"
 	},
 	"require-dev": {
+		"nette/di": "^3.0",
+		"nette/schema": "^1.2",
 		"phpstan/phpstan": "^1.3",
 		"phpstan/phpstan-phpunit": "^1.0",
 		"phpunit/phpunit": "^9.5"
