--- a/composer.json
+++ b/composer.json
@@ -23,16 +23,16 @@
 		"sort-packages": true
 	},
 	"require": {
-		"php": ">= 8.0",
-		"nette/utils": "^3.2",
+		"php": ">= 8.1",
+		"nette/utils": "^v4.0.0",
 		"opis/json-schema": "^2.2"
 	},
 	"require-dev": {
-		"nette/di": "^3.0",
-		"nette/schema": "^1.2",
+		"nette/di": "^3.2",
+		"nette/schema": "^1.3",
 		"phpstan/phpstan": "^1.3",
 		"phpstan/phpstan-phpunit": "^1.0",
-		"phpunit/phpunit": "^9.5"
+		"phpunit/phpunit": "^10.5.10"
 	},
 	"minimum-stability": "stable"
 }
